force-app/main/default/objects/SEG_Filtros_Excepciones__c/SEG_Filtros_Excepciones__c.object-meta.xml
<CustomObject>
    <description>Objeto utilizado para indicar los filtros de cuentas, grupos, clasificaciones, etc, que se pueden aplicar a una excepción.</description>
    <label>Filtro de Excepción</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID Excepciones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filtros de Excepciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>