force-app/main/default/objects/SEG_Filtros_Excepciones__c/fields/SEG_Centro_Empresa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Centro_Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que relaciona la excepción con la empresa</description>
    <label>Centro Empresa</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta indicada debe de ser un Centro CaixaBank</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Excepciones Centro</relationshipLabel>
    <relationshipName>SEG_Filtros_de_Excepciones</relationshipName>
    <type>Lookup</type>
</CustomField>