force-app/main/default/objects/SEG_Filtros_Excepciones__c/fields/SEG_ClasificacionRapida__c.field-meta.xml
<CustomField>
    <fullName>SEG_ClasificacionRapida__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que apunta a la clasificación rápida</description>
    <label>Clasificación Rápida</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La Clasificación Rápida debe de ser de Segmentos</errorMessage>
        <filterItems>
            <field>SEG_ClasificacionRapida__c.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Segmentos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SEG_ClasificacionRapida__c</referenceTo>
    <relationshipLabel>Filtros de Excepciones</relationshipLabel>
    <relationshipName>Filtros_de_Excepciones</relationshipName>
    <type>Lookup</type>
</CustomField>