force-app/main/default/objects/SEG_Filtros_Excepciones__c/fields/SEG_Excepciones__c.field-meta.xml
<CustomField>
    <fullName>SEG_Excepciones__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo que apunta hacia la excepción a aplicar</description>
    <inlineHelpText>Excepción relacionada.</inlineHelpText>
    <label>Excepciones</label>
    <referenceTo>SEG_Excepciones__c</referenceTo>
    <relationshipLabel>Filtros de Excepciones</relationshipLabel>
    <relationshipName>Filtros_de_Excepciones</relationshipName>
    <type>Lookup</type>
</CustomField>