force-app/main/default/objects/SEG_Filtros_Excepciones__c/fields/SEG_GestorComercial__c.field-meta.xml
<CustomField>
    <fullName>SEG_GestorComercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asignación de Gestor Comercial</description>
    <label>Gestor Comercial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Centro CaixaBank, Cliente, Cliente (Segmentos)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Filtros de Excepciones</relationshipLabel>
    <relationshipName>Filtros_de_Excepciones</relationshipName>
    <type>Lookup</type>
</CustomField>