force-app/main/default/objects/SEG_Filtros_Excepciones__c/fields/SEG_GrupoEmpresa__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoEmpresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asignación al grupo de empresas</description>
    <label>Grupo Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filtros de Excepciones (Grupo Empresa)</relationshipLabel>
    <relationshipName>Excepciones_Grupo_Empresas</relationshipName>
    <type>Lookup</type>
</CustomField>