force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_Excepciones_Centro.recordType-meta.xml
<RecordType>
    <fullName>SEG_Excepciones_Centro</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando los centros disponibles</description>
    <label>Excepciones de Centro</label>
</RecordType>