force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_Excepciones_CR.recordType-meta.xml
<RecordType>
    <fullName>SEG_Excepciones_CR</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando las clasificaciones disponibles</description>
    <label>Excepciones de CR</label>
</RecordType>