force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_Excepciones_Empresa.recordType-meta.xml
<RecordType>
    <fullName>SEG_Excepciones_Empresa</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando las empresas disponibles</description>
    <label>Excepciones de Empresa</label>
</RecordType>