force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_Excepciones_Grupo.recordType-meta.xml
<RecordType>
    <fullName>SEG_Excepciones_Grupo</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando los grupos disponibles</description>
    <label>Excepciones de Grupo</label>
</RecordType>