force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_Excepciones_Grupo_Empresa.recordType-meta.xml
<RecordType>
    <fullName>SEG_Excepciones_Grupo_Empresa</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando los grupos empresa disponibles</description>
    <label>Excepciones de Grupo Empresa</label>
</RecordType>