force-app/main/default/objects/SEG_Filtros_Excepciones__c/recordTypes/SEG_ExcepcionesGestorComercial.recordType-meta.xml
<RecordType>
    <fullName>SEG_ExcepcionesGestorComercial</fullName>
    <active>true</active>
    <description>Excepciones para los casos indicando los gestores comerciales</description>
    <label>Excepciones de Gestor Comercial</label>
</RecordType>